fix a few errors found by findbugs